# xml_bracket_notation

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
